--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
+    "konva": "^7.1.4",
+    "konva-react": "^0.1.0",
     "next": "9.5.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-html5-camera-photo": "^1.5.4",
+    "react-konva": "^17.0.0-0",
+    "react-webcam": "^5.2.1"
   }
 }
